# iac

./: .gitignore  .mergify.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd-terraform.yaml  ci-terraform.yaml  infracost.yaml
k8s/: .env.example
k8s/cert_manager/: instructions.md
k8s/ckan/: namespace.yaml
k8s/cloud_sql_proxy/: config-map.yaml  deployment.yaml  service-account.yaml  service.yaml
k8s/cloud_sql_proxy_mysql/: config-map.yaml  deployment.yaml  service-account.yaml
k8s/elastic/: issuer.yaml
k8s/id-basedosdados/: db-service.yaml  namespace.yaml  secret-00_sealed.yaml
k8s/id_basedosdados/: issuer.yaml  secret-00_sealed.yaml
k8s/jupyterlab/: ingress.yaml  issuer.yaml  namespace.yaml  secret-00_sealed.yaml  secret-01_sealed.yaml  secret-02_sealed.yaml
k8s/metabase/: db-service.yaml  ingress.yaml  issuer.yaml  secret-00_sealed.yaml
k8s/nginx_ingress/: command.md
k8s/passbolt/: configmap.yaml  db-service.yaml  deployment.yaml  ingress.yaml  issuer.yaml  namespace.yaml  pvc-gpg.yaml  pvc-jwt.yaml  secret-00_sealed.yaml  service.yaml
k8s/prefect-agent-basedosdados-dev-gcp-vertex/: namespace.yaml  secret-00_sealed.yaml  secret-01_sealed.yaml  secret-02_sealed.yaml  secret-03_sealed.yaml  secret-04_sealed.yaml
k8s/prefect-agent-prod/: namespace.yaml  secret-00_sealed.yaml  (+2 more)
scripts/: filebeat-elk-stack.sh
terraform/: .env.example  .gitignore  .terraform.lock.hcl  backend.tf  main.tf  providers.tf  terraform.tfvars  variables.tf
utils/: main.py
(+174 files in other folders)
