[tool.poetry]
name = "iac"
version = "0.1.0"
description = ""
authors = ["Guilherme Peres <contact@gperes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
typer = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
