[tool.poetry]
name = "iac"
version = "0.1.0"
description = ""
authors = ["Guilherme Peres <contact@gperes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
typer = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
